Sun Nov  2 10:05:19 1997  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add a test for inexact->exact and rationalize.
	* Makefile.am:  Pre-compile testing.scm to testing.zip.
	Always do check-obj; remove MISC_1_1.

Thu May 29 15:08:42 1997  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add some tests for magnitude.

Mon May 26 22:00:05 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Add inexact->exact test that detected gcd of 0 bug.
	* Makefile.{am,in}:  Remove unused junk.

Tue May 20 22:16:36 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Add two tests for recently-fixed bugs.

Tue Mar 25 19:37:14 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* mac-test.scm:  Add a test for demacro and gentemp.

Tue Mar 18 14:17:29 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* misc-test.scm:  New tests.
	* Makefile.am, Makefile.in:  Update.

Mon Mar 17 22:05:01 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* obj-test.scm:  New test.  Test record feature (if JDK 1.1).
	* Makefile.am, Makefile.in:  Update.

Mon Feb  3 22:58:45 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* Makefile.am:  KAWATEST now uses kawa shell script.

Sat Jan 25 15:45:14 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* test.scm:  Internal define is no longer expected to fail.
	* mac-test.scm, mac1.scm:  New test.
	* Makefile.am, Makefile.in:  Appropriate updates.

Sun Jan  5 19:30:22 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* test.scm:  Imaginary literals are now supported.

Sun Dec 15 22:37:03 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* num-test.scm:  Fix typo.
	* test.scm:  Add set! fail-expected where needed.
	Remove newline to fix one test.

Fri Dec 13 17:04:54 1996  Per Bothner  <bothner@deneb.cygnus.com>

	New directory - for test suites for Kawa.