@@ -13,6 +13,9 @@
       (/ x (* 2 y))))
 (test -54767/66192 dickey-test 77617 33096)
 
+(test 500000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
+      quotient (expt 10 200) (* 20 (expt 10 100)))
+
 (test 0 + 17280012451545786657095548928 -17280012451545786657095548928)
 (test 1250120440709706990357803482218496
   + 1250137720722158536144460577767424 -17280012451545786657095548928)
@@ -92,3 +95,14 @@
 (test 32 integer-length #xffffffff)
 (test 33 integer-length #x100000000)
 (test 1000000000000000000000000000000 * 1000000000000000 1000000000000000)
+
+;; From Norman Hardy <norm@netcom.com>
+(define (ssin x) (let ((a2 (quotient (* x x) dx)))
+   (- x (let tail ((term x)(ndx 2))
+      (let ((x (quotient (* a2 term) (* ndx (+ ndx 1) dx))))
+         (if (zero? x) 0 (- x (tail x (+ ndx 2)))))))))
+(define dx (expt 10 100))
+(define pi
+  31415926535897932384626433832795028841971693993751058209749445923078164062862089986280348253421170679)
+(test 3 ssin pi)
+
