@@ -1,3 +1,9 @@
+Sun Dec 14 17:02:02 1997  Per Bothner  <bothner@cygnus.com>
+
+	* num-test.scm:  Added two tests from Norman Hardy <norm@netcom.com>.
+	* misc-test.scm:  Add a repression test that used to cause bad warning.
+	* Makefile.am (CLEANFILES):  Also remove testing.zip and *.log.
+
 Sun Nov  2 10:05:19 1997  Per Bothner  <bothner@cygnus.com>
 
 	* num-test.scm:  Add a test for inexact->exact and rationalize.
